--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Weewoo",
+    "name": "weewoo",
     "version": "1.7.0",
     "description": "A fully customizable bot built with discord.js",
     "main": "app.js",
