--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "better-sqlite3": "^7.1.0",
         "common-tags": "^1.8.0",
         "cron-parser": "^3.5.0",
+        "discord-buttons": "^2.4.1",
         "discord.js": "^12.3.1",
         "he": "^1.2.0",
         "minimist": ">=1.2.2",
@@ -17,6 +18,7 @@
         "node-os-utils": "^1.3.1",
         "node-pre-gyp": "^0.11.0",
         "node-schedule": "^1.3.2",
+        "quick.db": "^7.1.3",
         "winston": "^3.2.1",
         "yaml": "^1.8.3",
         "youtube-search": "^1.1.4"
