--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "common-tags": "^1.8.0",
         "cron-parser": "^3.5.0",
         "discord-buttons": "^2.4.1",
+        "discord-slider": "^1.1.3",
         "discord.js": "^12.3.1",
         "he": "^1.2.0",
         "minimist": ">=1.2.2",
