--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
     "description": "A fully customizable bot built with discord.js",
     "main": "app.js",
     "dependencies": {
+        "@mapbox/node-pre-gyp": "^1.0.5",
         "ascii-table": "0.0.9",
         "better-sqlite3": "^7.1.0",
         "common-tags": "^1.8.0",
         "cron-parser": "^3.5.0",
-        "discord-buttons": "^3.0.1",
+        "discord-buttons": "^3.1.1",
         "discord-slider": "^1.1.3",
         "discord.js": "^12.3.1",
         "he": "^1.2.0",
-        "minimist": ">=1.2.2",
         "moment": "^2.22.2",
         "ms": "^2.1.2",
         "node-fetch": "^2.6.1",
         "node-os-utils": "^1.3.1",
-        "node-pre-gyp": "^0.11.0",
-        "node-schedule": "^1.3.2",
-        "pm2": "^4.5.6",
+        "node-pre-gyp": "^0.17.0",
+        "node-schedule": "^2.0.0",
         "quick.db": "^7.1.3",
         "winston": "^3.2.1",
         "yaml": "^1.8.3",
         "youtube-search": "^1.1.4"
     },
     "devDependencies": {
+        "minimist": "^1.2.5",
         "nodemon": "^2.0.4"
     },
     "scripts": {
