--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "node-schedule": "^2.0.0",
         "pm2": "^4.5.6",
         "quick.db": "^7.1.3",
+        "weky": "^1.9.0",
         "winston": "^3.2.1",
         "yaml": "^1.8.3",
         "youtube-search": "^1.1.4"
